FPET-967: mutation test fix